# services/user/internal/router/auth.go
@@ -6,12 +6,14 @@ import (
 	"github.com/s4f4y4t/go-microservice/services/user/internal/handler"
 )
 
-func RegisterAuthRoute(mux *http.ServeMux, handler *handler.AuthHandler) *http.ServeMux {
-	authM := http.NewServeMux()
+func RegisterAuthRoute(mux *http.ServeMux, h *handler.AuthHandler) *http.ServeMux {
+	authMux := http.NewServeMux()
 
-	authM.HandleFunc("POST /login", handler.Login)
-	authM.HandleFunc("POST /register", handler.Register)
+	authMux.HandleFunc("POST /register", h.Register)
+	authMux.HandleFunc("POST /login", h.Login)
+	authMux.HandleFunc("POST /refresh", h.Refresh)
+	authMux.HandleFunc("POST /logout", h.Logout)
 
-	mux.Handle("/auth/", http.StripPrefix("/auth", authM))
+	mux.Handle("/auth/", http.StripPrefix("/auth", authMux))
 	return mux
 }
